<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <Button
            android:text="@string/Start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStart"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/Stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStop"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp"/>
    <Button
            android:text="@string/Function_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonFunc1"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonStart"
            app:layout_constraintStart_toStartOf="@+id/buttonStart"
            app:layout_constraintEnd_toEndOf="@+id/buttonStart"/>
    <Button
            android:text="@string/Function_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonFunc2"
            app:layout_constraintStart_toStartOf="@+id/buttonStop"
            app:layout_constraintEnd_toEndOf="@+id/buttonStop"
            app:layout_constraintTop_toTopOf="@+id/buttonFunc1"
            app:layout_constraintBottom_toBottomOf="@+id/buttonFunc1"/>
    <Button
            android:text="@string/Function_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonFunc3"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonFunc1"
            app:layout_constraintStart_toStartOf="@+id/buttonFunc1"
            app:layout_constraintEnd_toEndOf="@+id/buttonFunc1"/>
    <Button
            android:text="@string/Function_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonFunc4"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonFunc2"
            app:layout_constraintStart_toStartOf="@+id/buttonFunc2"
            app:layout_constraintEnd_toEndOf="@+id/buttonFunc2"/>
    <Button
            android:text="@string/Forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonForward"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="@+id/buttonBrake"
            app:layout_constraintBottom_toTopOf="@+id/buttonBrake"
            app:layout_constraintStart_toStartOf="@+id/buttonBrake"/>
    <Button
            android:text="@string/Left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLeft"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonBrake"
            app:layout_constraintEnd_toStartOf="@+id/buttonBrake"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/Brake_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBrake"
            app:layout_constraintStart_toEndOf="@+id/buttonLeft"
            app:layout_constraintEnd_toStartOf="@+id/buttonRight"
            android:layout_marginBottom="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/Right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRight"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonBrake"
            app:layout_constraintStart_toEndOf="@+id/buttonBrake"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>