<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutFuncName"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewfunctioDesc"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Function_name_hint"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputFuncValue" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFuncName"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutFuncName"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutFuncName"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Function_value_hint"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
            android:text="@string/Function_popup_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewfunctioDesc" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutFuncName" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutFuncName" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutFuncName"/>
    <Button
            android:text="@string/Function_popup_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSetFunc" app:layout_constraintStart_toStartOf="@+id/textInputFuncValue"
            app:layout_constraintEnd_toEndOf="@+id/textInputFuncValue" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputFuncValue"/>
</android.support.constraint.ConstraintLayout>